objects/ChargentOrders__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__AVS_International__c</fullName>
        <label>AVS International</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__AVS_Response_Code__c</fullName>
        <label>AVS Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__AVS_Zip__c</fullName>
        <label>AVS Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Amount_available_for_Refund__c</fullName>
        <label>Amount available for Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Last_4__c</fullName>
        <label>Bank Account Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Status__c</fullName>
        <inlineHelpText>This field only works with certain gateways. See our documentations for more details.</inlineHelpText>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Bank_Transfer_Settlement_Date__c</fullName>
        <inlineHelpText>This field only works with certain gateways. See our documentations for more details.</inlineHelpText>
        <label>Settlement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Address_Line_2__c</fullName>
        <label>Billing Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_First__c</fullName>
        <label>Billing First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Last__c</fullName>
        <label>Billing Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_Province__c</fullName>
        <label>Billing Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Billing_State__c</fullName>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Code_Response__c</fullName>
        <label>Security Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Card_Last_4__c</fullName>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Cash_Disbursement__c</fullName>
        <label>Cash Disbursement</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Cash_Receipt__c</fullName>
        <label>Cash Receipt</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>MC Eurocard</fullName>
                </value>
                <value>
                    <fullName>UK Maestro</fullName>
                </value>
                <value>
                    <fullName>JCB Card</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Electron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Customer_Token__c</fullName>
        <label>Customer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Details_Payflow__c</fullName>
        <formula>IF( 
BEGINS(ChargentOrders__Gateway_ID__c, &quot;0&quot;), &quot;&quot;, HYPERLINK( &quot;https://manager.paypal.com/performSearchTransaction.do?searchType=transID&amp;searchTypePP=partialEmail&amp;firstName=&amp;searchValue=&quot; &amp; ChargentOrders__Gateway_ID__c &amp; &quot;&amp;submitbutton=Submit&amp;subaction=search&amp;reportName=SearchTransaction&amp;MerchId=&amp;menukey=Unsettled&quot; , &quot;Details&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Details (Payflow)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Details__c</fullName>
        <formula>IF(
BEGINS(ChargentOrders__Gateway_ID__c, &quot;0&quot;), &quot;&quot;, HYPERLINK( &quot;https://account.authorize.net/UI/themes/anet/merch.aspx?page=history&amp;sub=detail&amp;transID=&quot; &amp; ChargentOrders__Gateway_ID__c  &amp; &quot;&amp;MerchId=&amp;menukey=Unsettled&quot; , &quot;Details&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Gateway transaction details</inlineHelpText>
        <label>Details (Authorize.net)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Gateway_Date__c</fullName>
        <label>Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Gateway_ID__c</fullName>
        <label>Gateway ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Gateway_Response__c</fullName>
        <label>Gateway Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>ChargentBase__Gateway__c</referenceTo>
        <relationshipLabel>Transaction</relationshipLabel>
        <relationshipName>Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Ignore_In_PC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field, when true, on an Approved Authorization will cause this transaction to be ignored by the Payment Console and not prompt to be captured or voided</description>
        <label>Ignore In Payment Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Order__c</fullName>
        <label>Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Check (Paper)</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>ChargentOrders__Payment_Request__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Reason_Text__c</fullName>
        <label>Reason Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Response_Status__c</fullName>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Settlement_Time__c</fullName>
        <label>Settlement Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Tokenization__c</fullName>
        <inlineHelpText>The token that was used for this transaction.</inlineHelpText>
        <label>Tokenization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Chargent Transactions</relationshipLabel>
        <relationshipName>Chargent_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Chargent Transactions</relationshipLabel>
        <relationshipName>Chargent_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>ChargentOrders__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ChargentOrders__Gateway_ID__c</columns>
        <columns>ChargentOrders__Credit_Card_Type__c</columns>
        <columns>ChargentOrders__Amount__c</columns>
        <columns>ChargentOrders__Type__c</columns>
        <columns>ChargentOrders__Response_Status__c</columns>
        <columns>ChargentOrders__Response_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__All1</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Order__c</columns>
        <columns>ChargentOrders__Gateway_Date__c</columns>
        <columns>ChargentOrders__Amount__c</columns>
        <columns>ChargentOrders__Type__c</columns>
        <columns>ChargentOrders__Credit_Card_Type__c</columns>
        <columns>ChargentOrders__Response_Message__c</columns>
        <columns>ChargentOrders__Response_Status__c</columns>
        <columns>ChargentOrders__Gateway__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Response_Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/13/2020 12:00 AM</value>
        </filters>
        <label>All Transactions</label>
    </listViews>
    <listViews>
        <fullName>ChargentOrders__Errors_and_Declines</fullName>
        <columns>NAME</columns>
        <columns>ChargentOrders__Type__c</columns>
        <columns>ChargentOrders__Amount__c</columns>
        <columns>ChargentOrders__Response_Status__c</columns>
        <columns>ChargentOrders__Reason_Code__c</columns>
        <columns>ChargentOrders__Recurring__c</columns>
        <columns>ChargentOrders__Response_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ChargentOrders__Response_Status__c</field>
            <operation>equals</operation>
            <value>Error,Declined</value>
        </filters>
        <label>Errors and Declines</label>
    </listViews>
    <nameField>
        <displayFormat>TRX-{000000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>